# herdr

./: justfile
docs/next/: CHANGELOG.md
docs/next/api/: herdr-api.schema.json
plugins/context-usage/: CHANGELOG.md  Cargo.toml  README.md  herdr-plugin.toml
plugins/context-usage/src/: cache.rs  context.rs  install.rs  main.rs  models.rs  poll.rs  report.rs
plugins/context-usage/src/collectors/: antigravity.rs  claude.rs  codex.rs  grok.rs  hermes.rs  mod.rs  opencode.rs
src/: agent_resume.rs  cli.rs  config.rs  events.rs  main.rs  pane.rs  ui.rs  workspace.rs
src/api/: schema.rs  server.rs  subscriptions.rs
src/api/schema/: common.rs  integrations.rs  panes.rs  tests.rs  workspaces.rs
src/app/: actions.rs  agent_view.rs  api.rs  api_helpers.rs  creation.rs  mod.rs  runtime.rs  runtime_mutations.rs  state.rs
src/app/api/: layouts.rs  panes.rs  tabs.rs  workspaces.rs
src/app/input/: mod.rs  modal.rs  mouse.rs  sidebar.rs
src/cli/: agent.rs  integration.rs  pane.rs  runtime.rs  spec.rs  workspace.rs
src/config/: model.rs  sidebar.rs
src/detect/: manifest.rs  mod.rs
src/integration/: actions.rs  env.rs  mod.rs  registry.rs  targets.rs  types.rs
src/persist/: restore.rs  snapshot.rs
src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/server/: headless.rs
src/ui/: dialogs.rs  mobile.rs  monitor.rs  navigator.rs  sidebar.rs  status.rs  tab_surface.rs  tabs.rs  widgets.rs
src/ui/sidebar/: tokens.rs
src/workspace/: aggregate.rs
src/workspace/git/: status.rs
tests/: api_ping.rs  cli_wrapper.rs
(+3 files in other folders)
